--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "laravel-frontend-presets/black-dashboard": "^1.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "maatwebsite/excel": "3.1.64"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
