--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,8 @@
 *.html diff=html
 *.md diff=markdown
 *.php diff=php
+*.php linguist-language=PHP
+
 
 /.github export-ignore
 CHANGELOG.md export-ignore
